config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - host: example.local  # Placeholder domain for study purposes
    http:
      paths:
      - path: /pod1
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
      - path: /pod2
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
      - path: /pod3
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
